# cookbook_old

./: README.md
cookbook/: CMakeLists.txt  addrecipedialog.cpp  addrecipedialog.h  addrecipedialog.ui  cookbook.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipe.h  recipestorage.cpp  recipestorage.h  viewrecipedialog.ui
cookbook/cmake/: FindSqlite.cmake
cookbook/sql/: recipes.sql
cookbook/src/: addrecipedialog.cpp  addrecipedialog.h  mainwindow.cpp  mainwindow.h  recipe.h  tags.cpp  tags.h  viewrecipedialog.cpp  viewrecipedialog.h
cookbook/src/storage/: recipedatabasestorage.cpp  recipedatabasestorage.h  recipestorage.h
cookbook/ui/: addrecipedialog.ui  mainwindow.ui  viewrecipedialog.ui
